--- a/package.json
+++ b/package.json
@@ -1,5 +1,16 @@
 {
   "dependencies": {
-    "express": "^4.18.3"
-  }
+    "express": "^4.18.3",
+    "morgan": "^1.10.0"
+  },
+  "scripts": {
+    "start": "nodemon server.js"
+  },
+  "name": "natours",
+  "version": "1.0.0",
+  "main": "app.js",
+  "devDependencies": {},
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
