--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "morgan": "^1.10.0"
   },
   "scripts": {
-    "start": "nodemon server.js"
+    "start:dev": "nodemon server.js"
   },
   "name": "natours",
   "version": "1.0.0",
   "main": "app.js",
-  "devDependencies": {},
   "author": "",
   "license": "ISC",
   "description": ""
