--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "mongoose": "^5.13.22",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "slugify": "^1.6.6"
   },
   "scripts": {
     "start:dev": "nodemon server.js"
